--- a/development/config.json
+++ b/development/config.json
@@ -1,3 +1,4 @@
 {
-  "token": "MTIxOTQzMTIxNjAxMzY0Mzg3Ng.GFsC_h.5oGLwhdhV4mfwYtKobUkMyOxsIpjJuxwIgcIIk"
+  "token": "MTIxOTQzMTIxNjAxMzY0Mzg3Ng.Gb5B3E.x0PfJAkaH0S0T4Sy02rr5YwlBBmAugRrCkIjkQ",
+  "clientId": "1219431216013643876"
 }
