--- a/development/package.json
+++ b/development/package.json
@@ -9,7 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "eslint": "^9.5.0"
+  },
   "dependencies": {
-    "discord.js": "^13.17.1"
+    "discord.js": "^14.15.3"
   }
 }
