--- a/development/config.json
+++ b/development/config.json
@@ -1,4 +1,4 @@
 {
-  "token": "MTIxOTQzMTIxNjAxMzY0Mzg3Ng.Gb5B3E.x0PfJAkaH0S0T4Sy02rr5YwlBBmAugRrCkIjkQ",
+  "token": "",
   "clientId": "1219431216013643876"
 }
